`feat: updated App.css and App.jsx with scrollbar styles and alarm data`

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,23 @@
     font-family: "Geist", serif;
   }
   
+  /* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #44444434;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3b3b3b;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
